--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
   --primary-letter-spacing: 0.03em;
   --secondary-letter-spacing: 0.02em;
   --hero-letter-spacing: 0.06em;
+  --transition-duration: 250ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -44,14 +46,12 @@ ul {
   text-align: center;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/bcg-img.jpg');
+    url('../images/jpg/bcg-img.jpg');
 
   background-repeat: no-repeat;
   background-position: 50% 50%;
   max-width: 1600px;
 }
-
-/* svg */
 
 .icon-envelope {
   fill: #757575;
@@ -61,14 +61,20 @@ ul {
   fill: #2196f3;
 }
 
-.svg-envelope {
+.svg-envelope,
+.svg-smartphone {
   margin-right: 10px;
+
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
 }
 
 .contact-nav .contact-link {
   display: flex;
   align-items: center;
 }
+
 
 
 .icon-smartphone {
@@ -78,11 +84,6 @@ ul {
 .icon-smartphone:hover {
   fill: #2196f3;
 }
-
-.svg-smartphone {
-  margin-right: 10px;
-}
-
 
 
 .icon-antenna,
@@ -98,7 +99,6 @@ ul {
   align-items: center;
   margin-bottom: 30px;
 }
-
 
 
 .social-network-items {
@@ -120,6 +120,10 @@ ul {
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition-property: background-color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
 }
 
 .link-instagram:hover,
@@ -138,6 +142,8 @@ ul {
 .svg-facebook,
 .svg-linkedin {
   fill: #afb1b8;
+
+  transition: fill var(--transition-duration) var(--timing-function);
 }
 
 .link-instagram:hover .svg-instagram,
@@ -150,7 +156,6 @@ ul {
 .link-linkedin:focus .svg-linkedin {
   fill: #ffffff;
 }
-
 
 
 .feature-list-clients {
@@ -168,6 +173,10 @@ ul {
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
 }
 
 .feature-list-clients:hover .link-clients {
@@ -181,6 +190,10 @@ ul {
 .svg-client5,
 .svg-client6 {
   fill: #afb1b8;
+
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-clients:hover .svg-client1,
@@ -196,6 +209,10 @@ ul {
 .link-clients:focus .svg-client5,
 .link-clients:focus .svg-client6 {
   fill: #2196f3;
+
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .both-of-sections,
@@ -380,6 +397,14 @@ address {
   padding-right: 5px;
 }
 
+.site-nav .nav-link,
+.contact-nav .contact-link,
+.footer-contact .contact-link {
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
+}
+
 .site-nav .nav-link:hover,
 .contact-nav .contact-link:hover,
 .footer-contact .contact-link:hover,
@@ -450,6 +475,35 @@ address {
   color: var(--accent-color);
 }
 
+
+.item-strip {
+  position: relative;
+}
+
+.nav-link.current::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  right: 0px;
+  background-color: #2196F3;
+  border-radius: 2px;
+
+}
+
+
+.site-nav .current-portfolio::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 4px;
+  bottom: -1px;
+  right: 0px;
+  background-color: #2196F3;
+  border-radius: 2px;
+}
+
 .button {
   display: inline-block;
   border-radius: 4px;
@@ -469,6 +523,14 @@ address {
 
   cursor: pointer;
   border: none;
+
+  transition-property: background-color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
+}
+
+.button:hover {
+  background-color: #188CE8;
 }
 
 .secondary-button {
@@ -488,6 +550,10 @@ address {
 
   cursor: pointer;
   border: none;
+
+  transition-property: background-color, box-shadow, color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
 }
 
 .currently-active {
@@ -526,19 +592,6 @@ address {
   background-color: #f5f4fa;
 }
 
-/* 
-мелкий текст #757575 
-жирный текст #212121
-цвет лого черный #000000
-цвет лого синий #2196F3
-цвет кнопки (accent) #2196F3;
-цвет h1 #FFFFFF
-цвет фона h1 и футера #2F303A
-цвет фона сотрудников #F5F4FA
-#FFFFFF99 60% для почты и телефона в футере
-*/
-
-/* Портфолио */
 
 .wrap-list {
   display: flex;
@@ -553,23 +606,53 @@ address {
   cursor: pointer;
 }
 
-.wrap-element .footer-img {
+.wrap-element .wrap-img {
   display: block;
+  position: relative;
 }
 
-.link-wrap-element:hover,
-.link-wrap-element:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+
+
+.hidden-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 0;
+  transform: translateY(100%);
+  opacity: 0;
+
+  background-color: #2196f3;
+  color: #ffffff;
+  line-height: 1.55;
+  padding: 63px 24px;
+  font-size: 18px;
+
+  transition-property: background-color, transform, opacity;
+  overflow: hidden;
 }
 
 .link-wrap-element {
   text-decoration: none;
   color: var(--primary-text-color);
+
+  transition-property: box-shadow;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--timing-function);
 }
 
-.link-wrap-element:hover .projects-description,
-.link-wrap-element:focus .projects-description {
+
+.link-wrap-element:hover .overlay-text,
+.link-wrap-element:focus .overlay-text {
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.wrap-element:hover,
+.wrap-element:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -608,7 +691,28 @@ h1 {
 }
 
 .feature-list-item {
+  position: relative;
+
   width: calc((100% - 60px) / 3);
+}
+
+
+.label {
+  position: absolute;
+  width: 370px;
+  height: 70px;
+  right: 0px;
+  bottom: 0px;
+  background-color: rgba(48, 48, 58, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 1.14;
+  text-transform: uppercase;
 }
 
 .services-img {
@@ -654,7 +758,6 @@ h1 {
 }
 
 
-
 .first-footer-flex-container .logo {
   display: block;
   margin-bottom: 20px;
@@ -667,4 +770,53 @@ h1 {
 .container-footer {
   display: flex;
   align-items: baseline;
+}
+
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity var(--timing-function) var(--transition-duration), visibility var(--timing-function) var(--transition-duration);
+
+  z-index: 1;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+
+  background-color: #FFFFFF;
+
+  transform: translate(-50%, -50%);
+
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%);
+}
+
+.backdrop-button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 0;
+  right: 0;
+
+  background-color: #FFFFFF;
+
 }
